<resources>
    <string name="app_name">Weather App</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">sunset</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="update">Update</string>
    <string name="data">Data</string>
    <string name="manage_cities">Manage Cities</string>
    <string name="preference_file_key">com.example.helloworld.PREFERENCE_FILE_KEY</string>
    <string name="city">City</string>
    <string name="last_update">Last Update:</string>
</resources>